# BlockJumper

./: CMakeLists.txt  LICENSE  README
shaders/: basic.frag.glsl  basic.vert.glsl
src/character/: character.cpp  character.h  character_state.h  input_reader.cpp  input_reader.h
src/glad/: glad.c
src/input_reader/: input_reader.cpp  input_reader.h
src/main/: main.cpp
src/main/src/: TestGLFW.cpp
src/objects/: block.cpp  block.h  bounding_box.cpp  bounding_box.h  mario.cpp  mario.h  mesh.cpp  mesh.h  meshes.h  object.cpp  object.h  scene.cpp  scene.h  textures.h
src/renderer/: camera.cpp  camera.h  global_renderer.cpp  global_renderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/renderer/src/: renderer.cpp
src/util/: rng_util.h
